apps/paperless/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.10
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: media
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: media
              mountPath: /usr/src/paperless/data
              subPath: data
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nfs-paperless-pvc
      restartPolicy: Always
